Bug 478458 - Crashes on launch in EngineWatcher::integrateObject()
Summary: Crashes on launch in EngineWatcher::integrateObject()
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Emoji Selector (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-12 23:49 UTC by Nate Graham
Modified: 2023-12-18 23:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-12-12 23:49:28 UTC
Plasma 6 from today's git master.

The app crashes on launch. 100% reproducible for me.

#0  QObject::installEventFilter(QObject*) (this=0x0, obj=0x68cae0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:2318
#1  0x0000000000405a66 in EngineWatcher::integrateObject(QObject*) (this=0x68cae0, object=0x0) at /home/nate/kde/src/plasma-desktop/emojier/app/emojier.cpp:49
#2  0x00007ffff5402011 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fffffffcf70, r=0x68cae0, this=0x68cbb0)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobjectdefs_impl.h:433
#3  doActivate<false>(QObject*, int, void**) (sender=0x7fffffffd1f0, signal_index=8, argv=0x7fffffffcf70) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4021
#4  0x00007ffff53f85f7 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**)
    (sender=sender@entry=0x7fffffffd1f0, m=m@entry=0x7ffff6ddf140, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fffffffcf70)
    at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qobject.cpp:4081
#5  0x00007ffff6b09ca5 in QQmlApplicationEngine::objectCreated(QObject*, QUrl const&) (this=this@entry=0x7fffffffd1f0, _t1=<optimized out>, _t1@entry=0x0, _t2=...)
    at /usr/src/debug/qt6-qtdeclarative-6.6.0-1.fc39.x86_64/redhat-linux-build/src/qml/Qml_autogen/include/moc_qqmlapplicationengine.cpp:292
#6  0x00007ffff68f9daf in QQmlApplicationEnginePrivate::finishLoad(QQmlComponent*) (this=0x60c5a0, c=0x68d770)
    at /usr/src/debug/qt6-qtdeclarative-6.6.0-1.fc39.x86_64/src/qml/qml/qqmlapplicationengine.cpp:131
#7  0x00007ffff6b0b514 in QQmlApplicationEnginePrivate::ensureLoadingFinishes(QQmlComponent*) (this=<optimized out>, c=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.6.0-1.fc39.x86_64/src/qml/qml/qqmlapplicationengine.cpp:162
#8  0x00007ffff6b0b696 in QQmlApplicationEnginePrivate::startLoad(QUrl const&, QByteArray const&, bool) (this=<optimized out>, url=<optimized out>, data=..., dataFlag=255)
    at /usr/src/debug/qt6-qtdeclarative-6.6.0-1.fc39.x86_64/src/qml/qml/qqmlapplicationengine.cpp:109
#9  0x00007ffff6b0baf6 in QQmlApplicationEngine::load(QString const&) (this=this@entry=0x7fffffffd1f0, filePath=...)
    at /usr/src/debug/qt6-qtdeclarative-6.6.0-1.fc39.x86_64/src/qml/qml/qqmlapplicationengine.cpp:338
#10 0x0000000000404ff2 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /home/nate/kde/src/plasma-desktop/emojier/app/emojier.cpp:113
Comment 1 Marco Martin 2023-12-13 08:48:31 UTC
can reproduce
Comment 2 Bug Janitor Service 2023-12-13 14:08:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1924
Comment 3 Arjen Hiemstra 2023-12-13 16:01:17 UTC
Git commit 8717bd571b1aacd34b6b4f14f469937d82857a31 by Arjen Hiemstra.
Committed on 13/12/2023 at 16:36.
Pushed by ahiemstra into branch 'master'.

emojier: Fix location of app module imports

qt_add_qml_module places QML imports into QRC prefixed with `/qt/qml`,
so we need to account for that when loading any of these files. Ideally
we would be able to use API like `loadFromModule` everywhere.

M  +1    -1    emojier/app/CMakeLists.txt
M  +1    -1    emojier/app/emojier.cpp
M  +1    -1    emojier/app/ui/CategoryAction.qml
R  +2    -2    emojier/app/ui/Emojier.qml [from: emojier/app/ui/emojier.qml - 093% similarity]

https://invent.kde.org/plasma/plasma-desktop/-/commit/8717bd571b1aacd34b6b4f14f469937d82857a31
Comment 4 Bug Janitor Service 2023-12-14 16:36:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1927
Comment 5 Fushan Wen 2023-12-18 23:46:50 UTC
Git commit 94736e2f32096de057e5dc91c191c877089f1da9 by Fushan Wen.
Committed on 19/12/2023 at 00:22.
Pushed by fusionfuture into branch 'master'.

emojier: make sure it's functional

1. Can be opened
2. Can list emojis
3. Can save recent emojis

M  +5    -0    appiumtests/CMakeLists.txt
A  +60   -0    appiumtests/emojiertest.py
M  +5    -3    emojier/app/ui/CategoryPage.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/94736e2f32096de057e5dc91c191c877089f1da9