emojier: Fix location of app module imports

qt_add_qml_module places QML imports into QRC prefixed with `/qt/qml`,
so we need to account for that when loading any of these files. Ideally
we would be able to use API like `loadFromModule` everywhere.

BUG: 478458